fixed squashed menu button in safari and others

--- a/src/cms/css/_ui.scss
+++ b/src/cms/css/_ui.scss
@@ -5,13 +5,13 @@
   cursor: pointer;
   font-size: 3rem;
   font-weight: bold;
-  text-align: center;
-  // width: 70px;
-  padding: 0;
-  padding-top:10px;
-  padding-right:26px;
+  height:4rem;
   margin:0;
+  margin-top:10px;
+  margin-right:26px;
+  padding: 0;
   position: fixed;
+  text-align: center;
   top: 0;
   right: 0;
   z-index: 101;
